--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
+  "name": "goodGame",
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^27.0.1",
     "react": "16.3.1",
+    "react-dom": "^16.3.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-native-router-flux": "^4.0.0-beta.31",
     "react-native-search-box": "^0.0.18",
     "react-native-swiper": "^1.5.13",
-    "react-navigation": "git+https://github.com/react-community/react-navigation.git"
+    "react-navigation": "^2.0.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
