--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "goodGame",
   "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "test": "./node_modules/.bin/eslint src"
+  },
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
