--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.3.1",
     "react-dom": "^16.3.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-native-maps": "^0.21.0",
     "react-native-router-flux": "^4.0.0-beta.31",
     "react-native-search-box": "^0.0.18",
     "react-native-swiper": "^1.5.13",
