--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-maps": "^0.21.0",
+    "react-native-nav": "^2.0.2",
     "react-native-router-flux": "^4.0.0-beta.31",
     "react-native-search-box": "^0.0.18",
     "react-native-swiper": "^1.5.13",
