--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "private": true,
   "dependencies": {
+    "@remobile/react-native-card-list": "^1.0.2",
     "axios": "^0.18.0",
     "expo": "^27.0.1",
     "react": "16.3.1",
