--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.3.1",
     "react-dom": "^16.3.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-native-elements": "^0.19.1",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-maps": "^0.21.0",
     "react-native-nav": "^2.0.2",
