--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "tcomb-form-native": "^0.6.13"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
